<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_first_time_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.z034.myirishlifeapp.FirstTimeLoginActivity">

    <TextView
        android:text="@string/FirstTimeLogin_UserId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/FirstTimeLoginPassword"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="19dp"
        android:layout_marginStart="19dp"
        android:id="@+id/textView3"
        android:textSize="22sp" />

    <TextView
        android:text="@string/FirstTimeLogin_Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:textSize="22sp"
        android:layout_alignBaseline="@+id/FirstTimeLoginPassword"
        android:layout_alignBottom="@+id/FirstTimeLoginPassword"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3" />

    <Button
        android:text="@string/FirstTimeLogin_Submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:id="@+id/button4"
        android:layout_below="@+id/FirstTimeLoginPassword"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rounded_edittext"
        tools:textColor="#FFFFFF"
        android:width="220dp"
        android:onClick="SubmitButtonClick" />

    <Button
        android:text="@string/FirstTimeLogin_Scan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button6"
        android:background="@drawable/rounded_edittext"
        tools:textColor="#FFFFFF"
        android:width="220dp"
        android:layout_marginBottom="22dp"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/button5"
        android:layout_alignStart="@+id/button5"
        android:onClick="ScanButtonClick"/>

    <Button
        android:text="@string/FirstTimeLogin_Register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:id="@+id/button5"
        android:background="@drawable/rounded_edittext"
        tools:textColor="#FFFFFF"
        android:width="220dp"
        android:onClick="RegisterButtonClick"
        android:layout_below="@+id/button4"
        android:layout_alignLeft="@+id/button4"
        android:layout_alignStart="@+id/button4" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginTop="107dp"
        android:id="@+id/FirstTimeLoginUserId"
        android:textSize="22sp"
        android:hint="@string/FirstTimeLogin_UserIdHint"
        android:background="@drawable/textline"
        android:width="150dp"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/FirstTimeLoginPassword"
        android:layout_alignStart="@+id/FirstTimeLoginPassword"
        android:height="25dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_marginTop="30dp"
        android:id="@+id/FirstTimeLoginPassword"
        android:hint="@string/FirstTimeLogin_PasswordHint"
        android:background="@drawable/textline"
        android:width="150dp"
        android:layout_marginRight="28dp"
        android:layout_marginEnd="28dp"
        android:layout_below="@+id/FirstTimeLoginUserId"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:height="50dp"
        android:textSize="22sp" />
</RelativeLayout>
