<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.z034.myirishlifeapp.LoginActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/il_launcher"
        android:layout_marginTop="71dp"
        android:id="@+id/imageView3"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:scaleType="fitXY"
        android:width="820dp"
        android:adjustViewBounds="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword|numberPassword"
        android:ems="10"
        android:layout_below="@+id/imageView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:id="@+id/LoginPin"
        android:hint="@string/Login_EnterPinHint" />

    <Button
        android:text="@string/Login_ForgottenPin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LoginPin"
        android:layout_alignLeft="@+id/LoginPin"
        android:layout_alignStart="@+id/LoginPin"
        android:id="@+id/ForgottenPin"
        android:background="#FFFFF"
        android:textColor="#808080"
        android:onClick="ForgottenPinButtonClick (LoginActivity)" />

    <Button
        android:text="@string/Login_LoginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ForgottenPin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:id="@+id/Login"
        android:width="220dp"
        android:textSize="16sp"
        android:textColor="#FFFF"
        android:background="@drawable/rounded_edittext"
        android:onClick="LoginButtonClick (LoginActivity)" />

    <Button
        android:text="@string/Login_RegisterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:width="220dp"
        android:textSize="16sp"
        android:textColor="#FFFF"
        android:background="@drawable/rounded_edittext"
        android:layout_below="@+id/Login"
        android:layout_alignLeft="@+id/Login"
        android:layout_alignStart="@+id/Login"
        android:id="@+id/RegisterLogin"
        android:onClick="RegisterButtonClick (LoginActivity)" />
</RelativeLayout>

