<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.z034.myirishlifeapp.RegisterActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="23dp"
        android:layout_marginEnd="23dp"
        android:layout_marginTop="107dp"
        android:id="@+id/RegisterPolicyNumber"
        android:background="@drawable/textline"
        android:width="120dp" />

    <TextView
        android:text="@string/Register_PolicyNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="24dp"
        android:layout_marginEnd="24dp"
        android:id="@+id/textView5"
        android:layout_alignBaseline="@+id/RegisterPolicyNumber"
        android:layout_alignBottom="@+id/RegisterPolicyNumber"
        android:layout_toLeftOf="@+id/RegisterPolicyNumber"
        android:layout_toStartOf="@+id/RegisterPolicyNumber"
        android:textSize="22sp" />

    <TextView
        android:text="@string/Register_Dob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:layout_marginTop="43dp"
        android:id="@+id/textView6"
        android:layout_alignRight="@+id/textView5"
        android:layout_alignEnd="@+id/textView5"
        android:layout_alignLeft="@+id/textView5"
        android:layout_alignStart="@+id/textView5"
        android:textSize="22sp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:layout_alignBottom="@+id/textView6"
        android:id="@+id/editText3"
        android:background="@drawable/textline"
        android:layout_toRightOf="@+id/textView5"
        android:layout_alignRight="@+id/RegisterPolicyNumber"
        android:layout_alignEnd="@+id/RegisterPolicyNumber"
        android:layout_alignTop="@+id/textView6" />

    <TextView
        android:text="@string/Register_AlternativeEntry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView6"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="85dp"
        android:id="@+id/textView7"
        android:textSize="22sp" />

    <Button
        android:text="@string/Register_Scan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView7"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"
        android:id="@+id/RegisterScanButton"
        android:width="220dp"
        android:textSize="16sp"
        android:textColor="#FFFF"
        android:background="@drawable/rounded_edittext"
        android:onClick="RegisterScanButtonClick"/>
</RelativeLayout>
